Add basic implementation of connectivity manager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
 
     <string name="error_fill_empty_field">Заполните пустое поле</string>
     <string name="error_authorization">Не удалось авторизоваться</string>
+    <string name="error_network_lost">Нет подключения к Интернету</string>
 </resources>
