--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,12 @@
     <string name="lbl_archive">Архив</string>
     <string name="lbl_remember">Запомнить</string>
     <string name="lbl_sign_in">Войти</string>
+    <string name="lbl_balance">Баланс</string>
+
+    <string name="placeholder_equity">Капитал: %1$s</string>
+    <string name="placeholder_free_margin">Доступно: %1$s</string>
+    <string name="placeholder_address">Адрес: %1$s</string>
+    <string name="placeholder_zip_code">Индекс: %1$s</string>
 
     <string name="hint_username">Имя пользователя</string>
     <string name="hint_password">Пароль</string>
@@ -13,4 +19,10 @@
     <string name="error_fill_empty_field">Заполните пустое поле</string>
     <string name="error_authorization">Не удалось авторизоваться</string>
     <string name="error_network_lost">Нет подключения к Интернету</string>
+    <string name="lbl_trades">Сделки</string>
+    <string name="lbl_active">Активно</string>
+    <string name="lbl_total">Всего</string>
+    <string name="lbl_check_active_trades">Просмотр активных сделок</string>
+    <string name="lbl_tread_volume">Динамика</string>
+    <string name="lbl_address">Адрес</string>
 </resources>
